使用 Colab 创建而成

--- a/Python_for_Statistics(Introduction).ipynb
+++ b/Python_for_Statistics(Introduction).ipynb
@@ -1420,10 +1420,10 @@
       ],
       "metadata": {
         "id": "JG1A71O-NQrd",
-        "outputId": "603ba1f2-f1ee-4bd8-c562-257f80611f06",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "603ba1f2-f1ee-4bd8-c562-257f80611f06"
       },
       "execution_count": 1,
       "outputs": [
@@ -1453,10 +1453,10 @@
       ],
       "metadata": {
         "id": "ECNJGl1DJ-CP",
-        "outputId": "66681ddb-0431-4767-f826-9969231c302f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "66681ddb-0431-4767-f826-9969231c302f"
       },
       "execution_count": 2,
       "outputs": [
@@ -1490,10 +1490,10 @@
       ],
       "metadata": {
         "id": "YWC28kZdJ-Ug",
-        "outputId": "be63ffc8-05bc-45eb-a4ee-dd6f8a0cd41f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "be63ffc8-05bc-45eb-a4ee-dd6f8a0cd41f"
       },
       "execution_count": 4,
       "outputs": [
@@ -1524,10 +1524,10 @@
       ],
       "metadata": {
         "id": "N2EnZQ7gJ-lx",
-        "outputId": "6b26297a-f344-4f67-c49e-c8a4346fe579",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b26297a-f344-4f67-c49e-c8a4346fe579"
       },
       "execution_count": 7,
       "outputs": [
@@ -1559,10 +1559,10 @@
       ],
       "metadata": {
         "id": "0RPuWRh3J-4t",
-        "outputId": "f038e05f-695d-4bba-9096-904caa69b815",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f038e05f-695d-4bba-9096-904caa69b815"
       },
       "execution_count": 8,
       "outputs": [
@@ -1595,10 +1595,10 @@
       ],
       "metadata": {
         "id": "kw73hFGiJ_KH",
-        "outputId": "b78a1e09-9212-4f99-c57f-9fa81e654439",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b78a1e09-9212-4f99-c57f-9fa81e654439"
       },
       "execution_count": 15,
       "outputs": [
@@ -1628,10 +1628,10 @@
       ],
       "metadata": {
         "id": "Cw7Jn5eSJ_bt",
-        "outputId": "850894da-608a-4fc1-cf75-5cc744bf68b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "850894da-608a-4fc1-cf75-5cc744bf68b2"
       },
       "execution_count": 16,
       "outputs": [
@@ -1661,10 +1661,10 @@
       ],
       "metadata": {
         "id": "kuhGbZYlJ_yP",
-        "outputId": "7125fb28-a0b9-4e60-f1cf-dd3486495154",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7125fb28-a0b9-4e60-f1cf-dd3486495154"
       },
       "execution_count": 17,
       "outputs": [
@@ -1694,10 +1694,10 @@
       ],
       "metadata": {
         "id": "CgR26Bg-L2Mo",
-        "outputId": "36cc3209-44da-4c9e-b21a-22dbd948775a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "36cc3209-44da-4c9e-b21a-22dbd948775a"
       },
       "execution_count": 18,
       "outputs": [
@@ -1728,10 +1728,10 @@
       ],
       "metadata": {
         "id": "n6V3mmHFL2ai",
-        "outputId": "a871ab88-f814-4966-e64d-22d74962e70b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a871ab88-f814-4966-e64d-22d74962e70b"
       },
       "execution_count": 23,
       "outputs": [
@@ -1761,10 +1761,10 @@
       ],
       "metadata": {
         "id": "JlzhiFMTL2pj",
-        "outputId": "10bc6fb1-65c5-4672-8106-7aa93d1cb20a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "10bc6fb1-65c5-4672-8106-7aa93d1cb20a"
       },
       "execution_count": 24,
       "outputs": [
@@ -1793,10 +1793,10 @@
       ],
       "metadata": {
         "id": "oDp5sclOL232",
-        "outputId": "36578e48-12ed-4e3c-e084-22a7812cda81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "36578e48-12ed-4e3c-e084-22a7812cda81"
       },
       "execution_count": 26,
       "outputs": [
@@ -1820,7 +1820,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "stats_summary"
+      ],
       "metadata": {
         "id": "prjqhThEL3xP"
       },
