使用 Colab 创建而成

--- a/Python_for_Statistics(Introduction).ipynb
+++ b/Python_for_Statistics(Introduction).ipynb
@@ -1821,13 +1821,32 @@
     {
       "cell_type": "code",
       "source": [
-        "stats_summary"
+        "stats_summary = {\n",
+        "  \"mean\": 6,\n",
+        "  \"median\": 5,\n",
+        "  \"mode\": 3\n",
+        "}\n",
+        "\n",
+        "print(stats_summary)\n",
+        "\n"
       ],
       "metadata": {
-        "id": "prjqhThEL3xP"
+        "id": "prjqhThEL3xP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b14922a8-70bc-4efa-dc04-216135a96cec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'mean': 6, 'median': 5, 'mode': 3}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
